--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1> Drinking Games</h1>
-    <p>Hello World!</p>
+    <h1> First Game</h1>
+    <p>Description here</p>
+    
+    <h1> Second Game</h1>
+    <p>Description here</p>
+    
+    <h1> Third Game</h1>
+    <p>Description here</p>
   </body>
 </html>
